Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-9887

sanity-lfsck test_9a: FAIL: (4) Got speed 952, expected less than 144

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Critical Critical
    • Lustre 2.10.6
    • Lustre 2.11.0
    • None
    • 3
    • 9223372036854775807

      This issue was created by maloo for Bob Glossman <bob.glossman@intel.com>

      This issue relates to the following test suite run: https://testing.hpdd.intel.com/test_sets/742f02b4-837a-11e7-b90b-5254006e85c2.

      The sub-test test_9a failed with the following error:

      (4) Got speed 952, expected less than 144
      

      This might be a dup of LU-8877, but those haven't been reported for quite a while.
      Creating a new Jira ticket for recent instances. Will let somebody else decide if they are dups.

      Info required for matching: sanity-lfsck 9a
      Info required for matching: sanity-lfsck 9b

            yong.fan nasf (Inactive)
            maloo Maloo
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved: